FIX Use correct colour for focussed primary button in Dark Mode

--- a/client/src/styles/mfa.scss
+++ b/client/src/styles/mfa.scss
@@ -55,6 +55,10 @@
       color: var(--color-text);
     }
 
+    .btn-primary:focus {
+      box-shadow: 0 0 0 2px $dark-color-primary-button-focus-outline;
+    }
+
     .btn-link:focus,
     .btn-link:hover {
       color: var(--color-text);
